# WorldCup-2026

./: .gitignore  .markdownlint-cli2.yaml  CHANGELOG.md  Cargo.toml  Cross.toml  README.md  deny.toml  rust-toolchain.toml
.github/workflows/: audit.yml  ci.yml  publish.yml  release-please.yml
crates/wc-data/: Cargo.toml
crates/wc-data/src/: domain.rs  error.rs  lib.rs  provider.rs  transport.rs
crates/wc-data/src/backends/: api_football.rs  common.rs  espn.rs  football_data.rs  mod.rs
crates/wc-data/tests/: fixture_json.rs
crates/wc-data/tests/fixtures/: apifootball_events.json  apifootball_scoreboard.json  espn_scoreboard.json  espn_standings.json  espn_summary.json  football_data_matches.json  football_data_standings.json
crates/wc-tui/: Cargo.toml  build.rs
crates/wc-tui/assets/flags/: ATTRIBUTION.md
crates/wc-tui/src/: app.rs  cli.rs  config.rs  event.rs  logging.rs  main.rs  timefmt.rs  tui.rs
crates/wc-tui/src/data/: cache.rs  mod.rs
crates/wc-tui/src/ui/: flag_image.rs  flags.rs  icons.rs  mod.rs  screen_bracket.rs  screen_detail.rs  screen_live.rs  screen_matches.rs  screen_standings.rs  screen_team.rs  screens.rs  theme.rs  toast.rs
crates/wc-tui/src/ui/screens/: widgets.rs
crates/worldcup26/: Cargo.toml  build.rs
crates/worldcup26/src/: app.rs  cli.rs  config.rs  logging.rs  main.rs
crates/worldcup26/src/data/: cache.rs
crates/worldcup26/src/ui/: flag_image.rs  icons.rs  mod.rs  screen_bracket.rs  screen_detail.rs  screen_live.rs  screen_matches.rs  screen_standings.rs  screen_team.rs  screens.rs  theme.rs  toast.rs
docs/: architecture.md  data-providers.md  keybindings.md
scripts/: build-apt-repo.sh
