[package]
name = "worldcup26"
description = "Terminal UI for the FIFA World Cup 2026: schedule, standings, knockout bracket, and a live scoreboard."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"
keywords = ["world-cup", "football", "soccer", "terminal", "tui"]
categories = ["command-line-utilities"]
default-run = "worldcup26"

[[bin]]
name = "worldcup26"
path = "src/main.rs"

[lints]
workspace = true

[build-dependencies]
clap = { workspace = true }
clap_complete = { workspace = true }
clap_mangen = { workspace = true }

[dependencies]
wc-data = { workspace = true }
ratatui = { workspace = true }
ratatui-image = { workspace = true }
resvg = { workspace = true }
image = { workspace = true }
crossterm = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
time = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
directories = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }

# Used only to read the terminal cell pixel size via the TIOCGWINSZ ioctl on
# unix; not available (or needed) on Windows.
[target.'cfg(unix)'.dependencies]
rustix = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[package.metadata.deb]
name = "worldcup26"
maintainer = "David Jensenius"
copyright = "2024-2026, David Jensenius"
license-file = ["../../LICENSE", "0"]
extended-description = "Terminal UI for the FIFA World Cup 2026: schedule, standings, knockout bracket, and a live scoreboard."
section = "utils"
priority = "optional"
depends = "$auto"
assets = [
    ["target/release/worldcup26", "/usr/bin/worldcup26", "755"],
    ["../../README.md", "/usr/share/doc/worldcup26/README.md", "644"],
    # Generated by build.rs into the build-script OUT_DIR. cargo-deb rewrites the
    # `target/release/` prefix to `target/<triple>/release/` for cross builds,
    # and appends each glob-matched file's basename to the destination directory.
    ["target/release/build/worldcup26-*/out/worldcup26.1", "/usr/share/man/man1/", "644"],
    ["target/release/build/worldcup26-*/out/worldcup26", "/usr/share/bash-completion/completions/", "644"],
    ["target/release/build/worldcup26-*/out/_worldcup26", "/usr/share/zsh/vendor-completions/", "644"],
    ["target/release/build/worldcup26-*/out/worldcup26.fish", "/usr/share/fish/vendor_completions.d/", "644"],
]
